@@ -1,6 +1,8 @@
 24 Mar 2008 coudercd
  * better use of hash_get_processed() in codebuild.
  * fixed pkgconfig stuff in cases where dependencies can be missing.
+ * removed use of (broken) variable substitution in pmk.conf.
+ * added pkgconfig lib path detection.
 
 18 Jul 2007 coudercd
  * moved hash_t to hash.c and done some cleaning.
